<resources>
    <string name="app_name">SHAYAR</string>
    <string name="login">Login</string>
    <string name="new_here_create_account">New Here ? Create Account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="register">Register</string>

    <string name="password">Password</string>


    <string name="authenticator_app">Authenticator App</string>
    <string name="logout">Logout</string>

    <string name="phone_number">Phone Number</string>
    <string name="email_not_verfied">Email Not Verfied !</string>
    <string name="verify_now">Verify Now</string>
    <string name="reset_password">Reset Password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="change_profile">Change Profile</string>
    <string name="your_name">Your Name</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="shayrana">SHAYRANA</string>
    <string name="success_comes_from_taking_calculated_risks">SUCCESS COMES FROM TAKING CALCULATED RISKS</string>
    <string name="create_new_account">Create New Account</string>
    <string name="SECURITY">SECURITY</string>

    <string name="todo">TODO</string>
    <string name="VERIFY">VERIFICATION</string>
    <string name="resend">Resend</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="sending_otp">Sending OTP..</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="save2">Save</string>
    <string name="verify">Verify</string>
    <string name="name">Name</string>
    <string name="ashrut_saxena">ASHRUT SAXENA</string>
    <string name="rockingsaxena01_gmail_com">rockingsaxena01@gmail.com</string>
    <string name="_91_9876543210">+91 9876543210</string>


    <string name="quotes">QUOTES</string>
    <string name="Q">QUOTES</string>
    <string name="otp_auth">OTP AUTH</string>
    <string name="V">VERIFICATION</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="N">NEXT</string>
    <string name="next">NEXT</string>
    <string name="NE">NEXT</string>
    <string name="thank_you_so_much">THANK YOU SO MUCH!!!!</string>

</resources>
